--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar">
             <div class="logo">
                 <h2 style="margin-right: 20px; font-weight: lighter; font-size: 20px; font-family: 'Lobster', cursive;">
-                    <a href="AboutMe.html" style="text-decoration: none; color: inherit;">About my</a>
+                    <a href="index.html" style="text-decoration: none; color: inherit;">About my</a>
                 </h2>
             </div>
             <ul class="nav-links">
@@ -112,7 +112,7 @@
                     <div class="image-container">
                         <picture>
                             <source srcset="Sample1.png" media="(min-width: 768px)">
-                            <img src="Sample1.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                            <img src="Sample1.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                         </picture>
                         <div class="overlay-text">Web Design</div>
                     </div>
@@ -145,7 +145,7 @@
 
                     <picture>
                         <source srcset="Sample4.png" media="(min-width: 768px)">
-                        <img src="Sample4.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                        <img src="Sample4.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                     </picture>
                     <div class="overlay-text">Web Design</div>
 
@@ -160,7 +160,7 @@
 
                  <picture>
                      <source srcset="Sample5.png" media="(min-width: 768px)">
-                     <img src="Sample5.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                     <img src="Sample5.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                  </picture>
                  <div class="overlay-text">Logo Design</div>
 
@@ -198,7 +198,7 @@
                         <a href="https://youtu.be/THhVS-HJeu4?si=WWkaG9cLnuzIw4Vs" target="_blank" style="text-decoration: none; color: white;">
                             <picture>
                                 <source srcset="Sample8.png" media="(min-width: 768px)">
-                                <img src="Sample8.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                                <img src="Sample8.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                             </picture>
                             <div class="overlay-text">Listen</div>
 
