--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                 <td style="color: white; font-size: 50px;" width="25%">
                     <div class="image-container">
                         <picture>
-                            <source srcset="Sample1.png" media="(min-width: 768px)">
-                            <img src="Sample1.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                            <source srcset="Sample1.PNG" media="(min-width: 768px)">
+                            <img src="Sample1.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                         </picture>
                         <div class="overlay-text">Web Design</div>
                     </div>
