--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     <div class="image-container">
 
                     <picture>
-                        <source srcset="Sample4.png" media="(min-width: 768px)">
-                        <img src="Sample4.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                        <source srcset="Sample4.PNG" media="(min-width: 768px)">
+                        <img src="Sample4.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                     </picture>
                     <div class="overlay-text">Web Design</div>
 
@@ -159,8 +159,8 @@
                     <div class="image-container">
 
                  <picture>
-                     <source srcset="Sample5.png" media="(min-width: 768px)">
-                     <img src="Sample5.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                     <source srcset="Sample5.PNG" media="(min-width: 768px)">
+                     <img src="Sample5.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                  </picture>
                  <div class="overlay-text">Logo Design</div>
 
@@ -172,8 +172,8 @@
                     <div class="image-container">
 
                  <picture>
-                     <source srcset="Sample6.png" media="(min-width: 768px)">
-                     <img src="Sample6.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                     <source srcset="Sample6.PNG" media="(min-width: 768px)">
+                     <img src="Sample6.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                  </picture>
                  <div class="overlay-text">Logo Design</div>
 
@@ -185,8 +185,8 @@
                     <div class="image-container">
                         <a href="https://youtu.be/y4AeZ4XjZSQ?si=5BLH0K48rLsz0qro" target="_blank" style="text-decoration: none; color: white;">
                             <picture>
-                                <source srcset="Sample7.png" media="(min-width: 768px)">
-                                <img src="Sample7.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                                <source srcset="Sample7.PNG" media="(min-width: 768px)">
+                                <img src="Sample7.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                             </picture>
                             <div class="overlay-text">Listen</div>
 
@@ -197,8 +197,8 @@
                     <div class="image-container">
                         <a href="https://youtu.be/THhVS-HJeu4?si=WWkaG9cLnuzIw4Vs" target="_blank" style="text-decoration: none; color: white;">
                             <picture>
-                                <source srcset="Sample8.png" media="(min-width: 768px)">
-                                <img src="Sample8.png" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
+                                <source srcset="Sample8.PNG" media="(min-width: 768px)">
+                                <img src="Sample8.PNG" alt="Jerald Francis" class="WorkImg" width="100%" height="1000vh">
                             </picture>
                             <div class="overlay-text">Listen</div>
 
