--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
 
                     <a href="https://www.fiverr.com/jerald_francis" target="_blank" style="text-decoration: none;">
                         <picture>
-                            <source srcset="Fiverr.png" media="(min-width: 768px)">
-                            <img src="Fiverr.png" alt="Jerald Francis" class="FiverrImg" width="100%" height="100%">
+                            <source srcset="Fiverr2.jpg" media="(min-width: 768px)">
+                            <img src="Fiverr2.jpg" alt="Jerald Francis" class="FiverrImg" width="100%" height="100%">
                         </picture>
                         <div class="overlay-text">View my Profile</div>
 
