--- a/index.html
+++ b/index.html
@@ -378,16 +378,16 @@
                 </td>                
                    
                 <td style="color: white; font-size: 50px; font-family: 'Roboto', sans-serif;" width="25%">
-                    <a href="https://www.facebook.com/your_facebook_page" target="_blank" style="text-decoration: none; color: white;">
+                    <a href="https://www.facebook.com/FrancisFromPhilippines/" target="_blank" style="text-decoration: none; color: white;">
                         <i class="fab fa-facebook-square" style="font-size: 40px; margin-right: 10px;"></i>
                     </a>
-                    <a href="https://www.instagram.com/your_instagram_page" target="_blank" style="text-decoration: none; color: white;">
+                    <a href="https://www.instagram.com/franci_s_j/" target="_blank" style="text-decoration: none; color: white;">
                         <i class="fab fa-instagram" style="font-size: 40px; margin-right: 10px;"></i>
                     </a>
-                    <a href="https://www.twitter.com/your_twitter_profile" target="_blank" style="text-decoration: none; color: white;">
+                    <a href="https://twitter.com/frncsjrld" target="_blank" style="text-decoration: none; color: white;">
                         <i class="fab fa-twitter" style="font-size: 40px; margin-right: 10px;"></i>
                     </a>
-                    <a href="https://github.com/your_github_profile" target="_blank" style="text-decoration: none; color: white;">
+                    <a href="https://github.com/Jerald011003" target="_blank" style="text-decoration: none; color: white;">
                         <i class="fab fa-github" style="font-size: 40px;"></i>
                     </a>
                 </td>
