--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
             <div class="overlay">
                 <div class="content">
                     <div class="text">
-                        <div class="arrow">
-                            Hi, I am <span onclick="goToSection(2)">Jerald</span>
-                        </div>
+                      <div class="arrow">
+                        Hi, I am <span onclick="goToSection(2)">Jerald</span>
+                      </div>
+                      
                     </div>
                     <button class="email-button" onclick="redirectToGmail()">Email</button>
                 </div>
@@ -232,8 +233,8 @@
         <div class="interest-item">
           <div class="image-container">
             <picture>
-              <source srcset="Interest2.2.png" media="(min-width: 768px)">
-              <img src="Interest2.2.png" alt="Games" class="InterestImg" width="100%" height="100%">
+              <source srcset="Interest2.2.PNG" media="(min-width: 768px)">
+              <img src="Interest2.2.PNG" alt="Games" class="InterestImg" width="100%" height="100%">
             </picture>
           </div>
           <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Games</h2>
