--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
         <div class="right-contentitem">
           <p >
-            <b>My Experience:</b> I'm a Fiverr Music Producer, specializing in diverse music styles for clients worldwide. I build my portfolio with creative projects, tailor music to client requests, and prioritize quality. My approach centers on self-confidence, professionalism, and clear communication. Customer satisfaction is my priority, and I measure success by delivering music that I am proud of. Self-confidence, professionalism, effective communication.
+            <b>My Experience:</b> I'm a Fiverr Music Producer, specializing in diverse music styles for clients worldwide. I build my portfolio with creative projects, tailor music to client requests, and prioritize quality. My approach centers on self-confidence, professionalism, and clear communication. Customer satisfaction is my priority, and I measure success by delivering music that I am proud of. Confidence, professionalism.
             <a href="https://www.fiverr.com/jerald_francis" target="_blank" style="text-decoration: none; color: green;"> | View my profile on Fiverr</a>
           </p>
         </div>
@@ -218,7 +218,7 @@
 <section class="secfive"  id="interest">
     <div class="content5">
       <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif;">
-        <a href="#" style="text-decoration: none; color: white; border: 1px solid white; padding: 5px; font-family: 'Roboto', sans-serif; font-weight: lighter;">My Interests</a>
+        <a href="#" style="text-decoration: none; color: white; border: 1px solid white; padding: 5px; font-family: 'Roboto', sans-serif; font-weight: lighter; line-height: 2;">My Interests</a>
       </h2>
       <div class="interest-container">
         <div class="interest-item">
