--- a/index.html
+++ b/index.html
@@ -217,9 +217,10 @@
 <!-- Section 5 -->
 <section class="secfive"  id="interest">
     <div class="content5">
-      <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif;">
-        <a href="#" style="text-decoration: none; color: white; border: 1px solid white; padding: 5px; font-family: 'Roboto', sans-serif; font-weight: lighter; line-height: 2;">My Interests</a>
+      <h2 style="color: white; font-size: 20px; font-family: 'Roboto', sans-serif;">
+        <a href="#" style="text-decoration: none; color: white; border: 1px solid white; padding: 5px; font-family: 'Roboto', sans-serif; font-weight: lighter; line-height: 2;">My Interest</a>
       </h2>
+      <br>
       <div class="interest-container">
         <div class="interest-item">
           <div class="image-container">
@@ -228,7 +229,7 @@
               <img src="Interest1.webp" alt="Basketball" class="InterestImg" width="100%" height="100%">
             </picture>
           </div>
-          <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Basketball</h2>
+          <h2 style="color: white; font-size: 20px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Basketball</h2>
         </div>
         <div class="interest-item">
           <div class="image-container">
@@ -237,7 +238,7 @@
               <img src="Interest2.2.PNG" alt="Games" class="InterestImg" width="100%" height="100%">
             </picture>
           </div>
-          <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Games</h2>
+          <h2 style="color: white; font-size: 20px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Games</h2>
         </div>
         <div class="interest-item">
           <div class="image-container">
@@ -246,7 +247,7 @@
               <img src="Interest3.PNG" alt="Programming" class="InterestImg" width="100%" height="100%">
             </picture>
           </div>
-          <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Programming</h2>
+          <h2 style="color: white; font-size: 20px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Programming</h2>
         </div>
         <div class="interest-item">
           <div class="image-container">
@@ -255,7 +256,7 @@
               <img src="Interest4.PNG" alt="Movies" class="InterestImg" width="100%" height="100%">
             </picture>
           </div>
-          <h2 style="color: white; font-size: 25px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Movies</h2>
+          <h2 style="color: white; font-size: 20px; font-family: 'Roboto', sans-serif; font-weight: lighter;">Movies</h2>
         </div>
       </div>
     </div>
@@ -264,8 +265,9 @@
 <!-- Section 6 -->
 <section class="secsix"  id="contact">
     <h2 style="color: white; font-size: 20px; font-family: 'Roboto', sans-serif;">
-        <a href="#" style="text-decoration: none; color: white; border: 1px solid white; padding: 5px; font-family: 'Roboto', sans-serif; font-weight: lighter; line-height: 2;">GET IN TOUCH</a>
+        <a href="#" style="text-decoration: none; color: white; border: 1px solid white; padding: 5px; font-family: 'Roboto', sans-serif; font-weight: lighter; line-height: 2;">Get in Touch</a>
     </h2>
+    
     <div class="content6">
         
         <div class="left-content3">
