--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <main class="container">
-        
+        <div class="container">
           <!-- This is Navbar -->
         <nav class="navbar">
             <div class="logo" >
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </section>
-    
+      </div>
             <!-- Section 2 -->
           <section class="sectwo" id="background">
               <div class="content2">
