--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
         <!-- Footer -->
 
-        <footer style="background-color: #2A292B; color: white; text-align: center; padding: 10px;">
+        <footer class="foot1" style="background-color: #2A292B; color: white; text-align: center; padding: 10px;">
             &copy; 2023 Jerald. All Rights Reserved.
         </footer>
         
