--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           </picture>
         </div>
         <div class="right-contentitem">
-          <p><b>Fiverr's Client - William</b><br>As a client of him, he never treated me differently from others – instead, he whole-heartedly embraced my ideas and input. He helped me to think about the bigger picture and implement strategy into my everyday work, but also showed me how to bring people together and unite them for a single goal.</p>
+          <p><b>Fiverr's Client - William</b><br>We've worked on many projects together with Jerald at Fiverr, and he's a true asset to any team. He's a team player, but think on his feet and never settles for a no. His passion for what he does is uncanny, it's a pleasure to see him progress and grow more confident in his professional role over time.</p>
         </div>
       </div>
       <div class="row">
